Huge commit. Added thirdParty libraries providing linear optimization. Implemented linear optimization of probabilities in search tree. Enabled optimalization in search tree. Adjusted DL4J training for multiple epochs. Agent heading adjusted so now it is represented as vector and not single number.